--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ header img {
 }
 
 .banner-homepage {
-    width: 100vw;
+    width: 100%;
     height: 500px;
     background-image: url("../resources/banner1@2xmercadona.jpg");
     background-size: cover;
@@ -244,6 +244,9 @@ footer img {
 
 @media screen and (max-width:770px) {
 
+    .header-button {
+        display: none;
+    }
 
     .banner-homepage {
         width: 100vw;
